<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.musicalstructure.AlbumActivity">
//links to other activities
    <android.support.constraint.Guideline
        android:id="@+id/horizontal_guide_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/medium_margin"
        app:layout_constraintBottom_toTopOf="@id/horizontal_guide_top"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/main_text_button_tracks"
            style="@style/menu_text_style"
            android:textSize="14sp"
            android:text="@string/tracks" />

        <TextView
            android:id="@+id/main_text_button_albums"
            style="@style/menu_text_style"
            android:background="@color/colorAccent"
            android:textSize="14sp"
            android:text="@string/albums"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/main_text_button_playlist"
            style="@style/menu_text_style"
            android:textSize="14sp"
            android:text="@string/playlists" />

        <TextView
            android:id="@+id/main_text_button_store"
            style="@style/menu_text_style"
            android:textSize="14sp"
            android:text="@string/store" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/textcolor"
        android:padding="@dimen/medium_margin"
        android:text="@string/text_albums"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintTop_toBottomOf="@id/horizontal_guide_top" />

</android.support.constraint.ConstraintLayout>
