<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
    tools:context="com.example.android.musicalstructure.MainActivity">

    <android.support.constraint.Guideline
        android:id="@+id/horizontal_guide_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <android.support.constraint.Guideline
        android:id="@+id/horizontal_guide_middle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <android.support.constraint.Guideline
        android:id="@+id/horizontal_guide_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.88" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/medium_margin"
        app:layout_constraintBottom_toTopOf="@id/horizontal_guide_top"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/main_text_button_tracks"
            style="@style/menu_text_style"
            android:textSize="14sp"
            android:text="@string/tracks" />

        <TextView
            android:id="@+id/main_text_button_albums"
            style="@style/menu_text_style"
            android:textSize="14sp"
            android:text="@string/albums" />

        <TextView
            android:id="@+id/main_text_button_playlist"
            style="@style/menu_text_style"
            android:textSize="14sp"
            android:text="@string/playlists" />

        <TextView
            android:id="@+id/main_text_button_store"
            style="@style/menu_text_style"
            android:textSize="14sp"
            android:text="@string/store" />
    </LinearLayout>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/music"
        app:layout_constraintBottom_toTopOf="@id/horizontal_guide_middle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/horizontal_guide_top"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/main_button_play"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/ic_play_arrow_black_24dp"
        app:layout_constraintBottom_toTopOf="@id/horizontal_guide_bottom"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontal_guide_middle"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/main_button_repeat"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_skip_previous_black_24dp"
        app:layout_constraintBottom_toTopOf="@id/horizontal_guide_bottom"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontal_guide_middle"
        tools:ignore="ContentDescription"
        tools:layout_editor_absoluteY="343dp"
        app:layout_constraintVertical_bias="0.491" />

    <ImageView
        android:id="@+id/main_button_shuffle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginLeft="@dimen/large_margin"
        android:layout_marginStart="@dimen/large_margin"
        android:src="@drawable/ic_skip_next_black_24dp"
        app:layout_constraintBottom_toTopOf="@id/horizontal_guide_bottom"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontal_guide_middle"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/main_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/large_margin"
        android:layout_marginEnd="@dimen/large_margin"
        android:text="@string/display_time"
        app:layout_constraintBottom_toTopOf="@id/horizontal_guide_bottom"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/main_time_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/large_margin"
        android:layout_marginStart="@dimen/large_margin"
        android:text="@string/display_time"
        app:layout_constraintBottom_toTopOf="@id/horizontal_guide_bottom"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/horizontal_guide_bottom"
        app:layout_constraintLeft_toRightOf="@id/main_time"
        app:layout_constraintRight_toLeftOf="@id/main_time_left" />

    <TextView
        android:id="@+id/main_text_playlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:text="@string/playlist_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontal_guide_middle" />

    <TextView
        android:id="@+id/main_text_song_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/song_name"
        android:textStyle="bold"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontal_guide_bottom" />

    <TextView
        android:id="@+id/main_text_artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/artist"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_text_song_name" />

</android.support.constraint.ConstraintLayout>

